[gd_scene load_steps=13 format=3 uid="uid://dnqphbl5e44tn"]

[ext_resource type="Texture2D" uid="uid://cafh6no7e6j03" path="res://ui/menus/menu_bg.png" id="1_lce5o"]
[ext_resource type="Script" uid="uid://bwokny8rxgsix" path="res://ui/screen_ui/tech_menu/tech_menu.gd" id="1_uhide"]
[ext_resource type="Texture2D" uid="uid://dm2ft8dsj6hxq" path="res://ui/player_interface/info_box/nine_tile_menu.png" id="2_4ugt5"]
[ext_resource type="FontFile" uid="uid://cc6r2ujntj8np" path="res://ui/fonts/Angel Code Format (v1.2)/Sol Schori (White/Sol Schori (White).fnt" id="3_8dtan"]
[ext_resource type="Theme" uid="uid://b6tppincjordy" path="res://ui/main_ui_theme.tres" id="3_gqlew"]
[ext_resource type="Texture2D" uid="uid://bfsstyi7u6uwg" path="res://ui/screen_ui/tech_menu/tech_rocket_skills_body.png" id="4_4mcpe"]
[ext_resource type="Texture2D" uid="uid://cpfhxcj4mex44" path="res://ui/screen_ui/tech_menu/tech_rocket_skills_fuel.png" id="5_1jrc1"]
[ext_resource type="Texture2D" uid="uid://dsio21mg4t5oe" path="res://ui/screen_ui/tech_menu/tech_rocket_skills_wings.png" id="6_m6vhx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gqlew"]
atlas = ExtResource("4_4mcpe")
region = Rect2(32, 32, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvh08"]
atlas = ExtResource("6_m6vhx")
region = Rect2(32, 32, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rt57v"]
atlas = ExtResource("5_1jrc1")
region = Rect2(32, 32, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhide"]
atlas = ExtResource("1_lce5o")
region = Rect2(0, 208, 640, 152)

[node name="TechMenu" type="Control" groups=["tech_menu"]]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_uhide")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 97.0
offset_right = 163.0
offset_bottom = 499.0

[node name="Panel" type="NinePatchRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("2_4ugt5")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Title" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_gqlew")
theme_override_font_sizes/normal_font_size = 32
text = "Technology"
fit_content = true
horizontal_alignment = 1

[node name="Description" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_gqlew")
text = "Plant 3 Tech Trees!"
fit_content = true
horizontal_alignment = 1

[node name="RocketBody" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("AtlasTexture_gqlew")
stretch_mode = 5

[node name="RocketWings" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("AtlasTexture_uvh08")
stretch_mode = 5

[node name="RocketFuel" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("AtlasTexture_rt57v")
stretch_mode = 5

[node name="WinButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_gqlew")
text = "To the Moon!"

[node name="Backboard" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 300.0
texture = SubResource("AtlasTexture_uhide")

[node name="HBoxContainer" type="HBoxContainer" parent="Backboard"]
layout_mode = 0
offset_right = 1166.0
offset_bottom = 293.0

[node name="VictoryPanel" type="VBoxContainer" parent="Backboard/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextContainner" type="MarginContainer" parent="Backboard/HBoxContainer/VictoryPanel"]
layout_mode = 2
theme_override_constants/margin_top = 30

[node name="RequirementsLabel" type="RichTextLabel" parent="Backboard/HBoxContainer/VictoryPanel/TextContainner"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("3_8dtan")
theme_override_font_sizes/normal_font_size = 48
text = "Technology Required:
- Rocket Body
- Rocket Fuel
- Rocket Wings"
fit_content = true
horizontal_alignment = 1

[node name="ButtonContainer" type="MarginContainer" parent="Backboard/HBoxContainer/VictoryPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Backboard/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="Backboard/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="Backboard/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
